--- a/styles/style-main.css
+++ b/styles/style-main.css
@@ -7,14 +7,11 @@
 }
 
 body .background {
-  background-color: rgb(243, 243, 253);
-  background-image: url("../img/login_img/Vector_up.png"),
-    url("../img/login_img/Vector_down.png");
+  background-color: rgb(180, 187, 235);
   background-size: 100vw;
   background-repeat: no-repeat;
   width: 100%;
   height: 100vh;
-
   display: flex;
   align-items: center;
 }
@@ -24,7 +21,7 @@ body .background {
   z-index: 999;
   width: 45%;
   min-width: 450px;
-  height: 450px;
+  height: fit-content;
   padding: 30px;
   text-align: center;
   top: 50%;
@@ -83,11 +80,12 @@ body .background {
 
 .survey-wrapper {
   width: 70%;
-  height: 100px;
+  height: fit-content;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
+  margin-bottom: 30px;
 }
 
 .survey-wrapper > div {
@@ -104,15 +102,13 @@ body .background {
 }
 
 .login-btn {
-  position: absolute;
-  bottom: 40px;
-  width: 50%;
+  padding-bottom: 3px;
+  width: 250px;
   height: 50px;
-
   background-color: #6769e9;
   background-position: left;
   background-size: 200%;
-
+  text-align: center;
   color: white;
   font-size: 20px;
   font-weight: 400;
@@ -149,6 +145,11 @@ body .background {
   display: flex;
   justify-content: flex-end;
   align-items: center;
+}
+
+.bg-object {
+  width: 80%;
+  margin: 0 auto;
 }
 
 footer {
