--- a/styles/style-main.css
+++ b/styles/style-main.css
@@ -1,162 +1,154 @@
-* {
-  margin: 0px;
-  padding: 0px;
-  font-family: "Noto Sans KR", "나눔고딕", "NanumGothic", BlinkMacSystemFont,
-    -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
-    "Fira Sans", "Droid Sans", sans-serif, "Helvetica Neue";
+body {
+  background-color: rgb(224, 224, 224);
 }
 
-body .background {
-  background-color: rgb(180, 187, 235);
-  background-size: 100vw;
-  background-repeat: no-repeat;
+header {
+  position: fixed;
+  z-index: 9999;
   width: 100%;
-  height: 100vh;
+  height: 80px;
+  background-color: white;
+  box-shadow: 0 1px 4px rgba(47, 47, 48, 0.219);
   display: flex;
+  justify-content: center;
   align-items: center;
 }
 
-.login-wrapper {
-  position: absolute;
-  z-index: 999;
-  width: 45%;
-  min-width: 450px;
-  height: fit-content;
-  padding: 30px;
-  text-align: center;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: #ffffff;
-  border-radius: 5px;
-  box-shadow: 1px 3px 6px rgba(42, 42, 46, 0.274);
+header > nav {
+  width: 91%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.input-box {
+header > nav img {
+  width: 45px;
+  height: auto;
+}
+
+header > nav img:hover {
+  transform: rotate(15deg);
+}
+
+header > nav > .logo-wrapper {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  cursor: pointer;
+}
+
+header > nav > .logo-wrapper > h1 {
+  margin-left: 15px;
+}
+
+header > nav > ul {
+  min-width: 400px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  flex: 1;
+}
+
+header > nav > ul > li {
+  margin: 0 4%;
+}
+
+header > nav > ul > li:hover {
+  transform: translate(0, -1px);
+}
+
+header > nav > ul > li > a {
+  padding: 5px 10px;
+  font-size: 18px;
+  cursor: pointer;
+  color: rgb(46, 46, 46);
+}
+
+header > nav > #logout-button {
+  background-color: transparent;
+  border: none;
+  width: fit-content;
+  height: fit-content;
+  padding: 5px 10px;
+  font-size: 16px;
+  cursor: pointer;
+  color: rgb(46, 46, 46);
+}
+
+header > nav > #logout-button:hover {
+  transform: translate(0, -1px);
+}
+
+aside {
+  background-color: white;
+  width: 250px;
+  height: 100%;
+  position: fixed;
+  z-index: 9998;
+  border-right: 1px solid rgba(38, 38, 44, 0.151);
+}
+
+aside > .aside-container {
+  width: 100%;
+  position: absolute;
+  top: 150px;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.input-box > .input-box-header {
+aside > .aside-container > .user-info-wrapper {
+  width: 80%;
+  height: fit-content;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+aside > .aside-container > .user-info-wrapper > .user-icon {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  border: 10px solid #615eff;
+}
+
+aside > .aside-container > .user-info-wrapper > #nav-user-name {
+  margin: 20px 0;
+  padding-bottom: 10px;
+  width: 90%;
+  text-align: center;
+  border-bottom: 1px solid rgba(66, 66, 66, 0.2);
+}
+
+aside > .aside-container > ul {
+  height: 200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+aside > .aside-container > ul > li:hover {
+  transform: translate(0, -1px);
+}
+
+aside > .aside-container > ul > li > a {
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: center;
-}
-
-.input-box-header > img {
-  width: 50px;
-  height: 50px;
-}
-
-.input-box > h4 {
-  font-size: 15px;
-  font-weight: 400;
-  margin: 20px;
-}
-
-.input-name {
-  width: 50%;
-  height: 25px;
-  padding: 3px;
-  margin-bottom: 30px;
-  border: none;
-  border-bottom: 2px solid rgba(49, 49, 54, 0.144);
-  outline: none;
-  color: #272727;
-  font-size: 16px;
-  font-weight: 300;
-  text-align: center;
-}
-
-.input-name:focus:focus {
-  border-color: rgba(86, 52, 211, 0.945);
-}
-
-.input-name:focus::placeholder {
-  color: transparent;
-}
-
-.survey-wrapper {
-  width: 70%;
   height: fit-content;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
-  margin-bottom: 30px;
+  cursor: pointer;
 }
 
-.survey-wrapper > div {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  width: fit-content;
-  padding: 4px 10px;
+aside > .aside-container > ul > li > a > p {
+  font-size: 16px;
+}
+
+aside > .aside-container > ul > li > a > .menu-icon {
+  width: 30px;
   height: 30px;
-  border-radius: 19px;
-  background-color: rgb(233, 233, 233);
-  margin: 3px;
-  cursor: pointer;
-}
-
-.login-btn {
-  padding-bottom: 3px;
-  width: 250px;
-  height: 50px;
-  background-color: #6769e9;
-  background-position: left;
-  background-size: 200%;
-  text-align: center;
-  color: white;
-  font-size: 20px;
-  font-weight: 400;
-  border-style: none;
-  border-radius: 3px;
-  cursor: pointer;
-  display: inline;
-}
-
-.login-btn:hover {
-  background-color: #5e46e6;
-  transform: translate(0, -1px);
-  box-shadow: 0 2px 4px rgba(56, 56, 63, 0.397);
-}
-
-.login-btn:active {
-  transform: scale(0.99);
-  transform: translate(0, 0px);
-  box-shadow: none;
-}
-
-.left-chars {
-  position: absolute;
-  left: 0;
-  width: 50%;
-  display: flex;
-  align-items: center;
-}
-
-.right-chars {
-  position: absolute;
-  right: 0;
-  width: 50%;
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-}
-
-.bg-object {
-  width: 80%;
-  margin: 0 auto;
-}
-
-footer {
-  position: fixed;
-  bottom: 0;
-  padding-bottom: 50px;
-  width: 100%;
-  color: rgb(24, 24, 24);
-  text-align: center;
+  margin-right: 10px;
+  background-color: #bfbee4;
+  border-radius: 50%;
 }
