modified iframes style

--- a/styles/style-main.css
+++ b/styles/style-main.css
@@ -156,12 +156,12 @@ aside > .aside-container > ul > li > a > .menu-icon {
 .main-section {
   position: absolute;
   width: 100%;
-  height: 80%;
+  height: 800px;
   top: 100px;
 }
 
 .main-section > iframe {
   margin-left: 250px;
   width: 80vw;
-  height: 82vh;
+  height: 100%;
 }
