--- a/styles/style-default.css
+++ b/styles/style-default.css
@@ -4,6 +4,11 @@
   font-family: "Noto Sans KR", "나눔고딕", "NanumGothic", BlinkMacSystemFont,
     -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
     "Fira Sans", "Droid Sans", sans-serif, "Helvetica Neue";
+
+  -ms-overflow-style: none;
+}
+*::-webkit-scrollbar {
+  display: none;
 }
 
 body {
