--- a/page/club/styles/buttonStyleDeveloperClub.css
+++ b/page/club/styles/buttonStyleDeveloperClub.css
@@ -17,6 +17,7 @@
   width: 150px;
   height: 150px;
   box-shadow: 0 1px 2px rgba(37, 37, 37, 0.363);
+  cursor: pointer;
 }
 
 .club-section > .club-button-container > button:hover {
