--- a/page/grade/styles/buttonStyleDeveloperCurriculum.css
+++ b/page/grade/styles/buttonStyleDeveloperCurriculum.css
@@ -17,6 +17,7 @@
   width: 150px;
   height: 150px;
   box-shadow: 0 1px 2px rgba(37, 37, 37, 0.363);
+  cursor: pointer;
 }
 
 .grade-section > .grade-button-container > button:hover {
