--- a/page/site/styles/buttonStyleDeveloperSite.css
+++ b/page/site/styles/buttonStyleDeveloperSite.css
@@ -4,7 +4,11 @@
   margin-left: 30px;
 }
 
-.site-section > .site-button-container > button {
+.site-section iframe {
+  margin: 10px;
+}
+
+.site-section > .site-button-container button {
   background-color: white;
   text-decoration: none;
   font-size: 1rem;
@@ -20,29 +24,29 @@
   cursor: pointer;
 }
 
-.site-section > .site-button-container > button:hover {
+.site-section > .site-button-container button:hover {
   transform: translateY(-1px);
   box-shadow: 0 3px 6px rgba(37, 37, 37, 0.205);
 }
 
-.site-section > .site-button-container > button:active {
+.site-section > .site-button-container button:active {
   box-shadow: none;
   transform: scale(0.99);
   transform: translate(0, 0px);
 }
 
-.site-section > .site-button-container > button > div {
+.site-section > .site-button-container button > div {
   opacity: 0.5;
   height: 105px;
   padding-top: 10px;
   margin-top: 10px;
 }
-.site-section > .site-button-container > button > div:hover {
+.site-section > .site-button-container button > div:hover {
   opacity: 1;
 }
 
 /*버튼 1_공부용*/
-.site-section > .site-button-container > .site-button-item1 > div {
+.site-section > .site-button-container .site-button-item1 > div {
   background: url("../../../img/button/btnimg_site_study.svg");
   background-repeat: no-repeat;
   background-position: 50% 10%;
@@ -50,7 +54,7 @@
 }
 
 /*버튼 2_자료용*/
-.site-section > .site-button-container > .site-button-item2 > div {
+.site-section > .site-button-container .site-button-item2 > div {
   background: url("../../../img/button/btnimg_site_reference.svg");
   background-repeat: no-repeat;
   background-position: 52% 10%;
