modified detail page and add profile

--- a/page/machine/styles/buttonStyleDeveloperDevice.css
+++ b/page/machine/styles/buttonStyleDeveloperDevice.css
@@ -8,6 +8,10 @@
   margin: 10px;
 }
 
+a {
+  text-decoration: none;
+}
+
 .device-section > .device-button-container button {
   background-color: white;
   text-decoration: none;
