--- a/page/grade/styles/buttonStyleDeveloperCurriculum.css
+++ b/page/grade/styles/buttonStyleDeveloperCurriculum.css
@@ -2,10 +2,21 @@
   display: flex;
   flex-direction: column;
   margin-left: 30px;
+  overflow: auto;
+  -ms-overflow-style: none;
+}
+.grade-section:-webkit-scrollbar {
+  display: none;
 }
 
 .grade-section iframe {
   margin: 10px;
+  box-shadow: 0 1px 3px rgba(37, 37, 37, 0.363);
+  overflow: auto;
+  -ms-overflow-style: none;
+}
+.grade-section iframe:-webkit-scrollbar {
+  display: none;
 }
 
 a {
