--- a/page/machine/styles/buttonStyleDeveloperDevice.css
+++ b/page/machine/styles/buttonStyleDeveloperDevice.css
@@ -2,10 +2,21 @@
   display: flex;
   flex-direction: column;
   margin-left: 30px;
+  overflow: auto;
+  -ms-overflow-style: none;
+}
+.device-section:-webkit-scrollbar {
+  display: none;
 }
 
 .device-section iframe {
   margin: 10px;
+  box-shadow: 0 1px 3px rgba(37, 37, 37, 0.363);
+  overflow: auto;
+  -ms-overflow-style: none;
+}
+.device-section iframe:-webkit-scrollbar {
+  display: none;
 }
 
 a {
