--- a/styles/style-main.css
+++ b/styles/style-main.css
@@ -24,6 +24,7 @@ header > nav {
 
 header > nav img {
   width: 45px;
+  margin-top: 5px;
   height: auto;
 }
 
@@ -83,7 +84,7 @@ header > nav > #logout-button:hover {
 
 aside {
   background-color: white;
-  width: 250px;
+  width: 260px;
   height: 100%;
   position: fixed;
   z-index: 9998;
@@ -179,10 +180,45 @@ aside > .aside-container > ul > li .menu-icon > img {
   width: 100%;
   height: 800px;
   top: 100px;
+  overflow: auto;
+  -ms-overflow-style: none;
+}
+.main-section:-webkit-scrollbar {
+  display: none;
 }
 
 .main-section > iframe {
   margin-left: 250px;
   width: 80vw;
   height: 100%;
+  overflow: auto;
+  -ms-overflow-style: none;
+}
+.main-section > iframe:-webkit-scrollbar {
+  display: none;
+}
+
+#home-button {
+  position: fixed;
+  bottom: 45px;
+  right: 35px;
+  background-color: white;
+  box-shadow: 1px 2px 3px rgba(34, 34, 34, 0.233);
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+
+#home-button :hover {
+  transform: rotate(15deg);
+}
+
+#home-button > img {
+  margin-top: 5px;
+  width: 32px;
+  height: auto;
 }
