--- a/styles/style-main.css
+++ b/styles/style-main.css
@@ -133,7 +133,7 @@ aside > .aside-container > .user-info-wrapper > #nav-user-name {
 
 aside > .aside-container > ul {
   margin-top: 20px;
-  height: 200px;
+  height: 250px;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -145,12 +145,15 @@ aside > .aside-container > ul > li:hover {
 
 aside > .aside-container > ul > li {
   margin: 10px 0;
+  height: fit-content;
+  width: fit-content;
 }
 
 aside > .aside-container > ul > li > a {
   display: flex;
   flex-direction: row;
   align-items: center;
+  width: fit-content;
   height: fit-content;
   cursor: pointer;
 }
