--- a/page/club/detail/css/contentStyleDeveloperClub.css
+++ b/page/club/detail/css/contentStyleDeveloperClub.css
@@ -1,3 +1,17 @@
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Noto Sans KR", "나눔고딕", "NanumGothic", BlinkMacSystemFont,
+    -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
+    "Fira Sans", "Droid Sans", sans-serif, "Helvetica Neue";
+
+  overflow: auto;
+  -ms-overflow-style: none;
+}
+*::-webkit-scrollbar {
+  display: none;
+}
+
 body {
   background-color: white;
   padding: 10px 30px;
