--- a/page/club/detail/css/contentStyleDeveloperClub.css
+++ b/page/club/detail/css/contentStyleDeveloperClub.css
@@ -4,6 +4,7 @@
     "Fira Sans", "Droid Sans", sans-serif, "Helvetica Neue";
 
   overflow: auto;
+  -webkit-overflow-style: none;
   -ms-overflow-style: none;
 }
 *::-webkit-scrollbar {
