--- a/page/machine/styles/buttonStyleDeveloperDevice.css
+++ b/page/machine/styles/buttonStyleDeveloperDevice.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   margin-left: 30px;
   overflow: auto;
+  -webkit-overflow-style: none;
   -ms-overflow-style: none;
 }
 .device-section:-webkit-scrollbar {
@@ -13,6 +14,7 @@
   margin: 10px;
   box-shadow: 0 1px 3px rgba(37, 37, 37, 0.363);
   overflow: auto;
+  -webkit-overflow-style: none;
   -ms-overflow-style: none;
 }
 .device-section iframe:-webkit-scrollbar {
