--- a/styles/style-main.css
+++ b/styles/style-main.css
@@ -184,6 +184,7 @@ aside > .aside-container > ul > li .menu-icon > img {
   height: 800px;
   top: 100px;
   overflow: auto;
+  -webkit-overflow-style: none;
   -ms-overflow-style: none;
 }
 .main-section:-webkit-scrollbar {
@@ -195,6 +196,7 @@ aside > .aside-container > ul > li .menu-icon > img {
   width: 80vw;
   height: 100%;
   overflow: auto;
+  -webkit-overflow-style: none;
   -ms-overflow-style: none;
 }
 .main-section > iframe:-webkit-scrollbar {
